<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.canalu.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_maps_routes"
        android:name="com.example.canalu.ui.rutes.maps.MapsRoutesFragment"
        android:label="@string/menu_maps_routes"
        tools:layout="@layout/fragment_maps_routes" >

    </fragment>

    <fragment
        android:id="@+id/nav_list_routes"
        android:name="com.example.canalu.ui.rutes.list.ListRoutesFragment"
        android:label="@string/menu_maps_routes"
        tools:layout="@layout/fragment_maps_routes" >

    </fragment>

    <fragment
        android:id="@+id/nav_routes"
        android:name="com.example.canalu.ui.rutes.RoutesFragment"
        android:label="@string/menu_maps_routes"
        tools:layout="@layout/fragment_routes" >

    </fragment>

    <fragment
        android:id="@+id/nav_customers"
        android:name="com.example.canalu.ui.customers.CustomersFragment"
        android:label="@string/menu_customers"
        tools:layout="@layout/fragment_customers" >
    </fragment>

    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.canalu.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" >
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.example.canalu.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.canalu.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.canalu.ui.settings.SettingsFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.canalu.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />

</navigation>