<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/details_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_titleAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_title_address" />

            <EditText
                android:id="@+id/details_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="los lapachos 232 *"
                android:textSize="16sp"
                app:backgroundTint="@color/colorLinea" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/details_title_status" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/details_rb_visited"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details_visited" />

                <RadioButton
                    android:id="@+id/details_rb_not_visited"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/details_not_visited" />
            </RadioGroup>

            <TextView
                android:id="@+id/details_title_observations"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_title_observations"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/details_observation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="El local estaba cerrado"
                android:textSize="16sp"
                app:backgroundTint="@color/colorLinea" />

            <Button
                android:id="@+id/details_buton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_empty_solid"
                android:textColor="@color/colorAccent"
                android:paddingHorizontal="20dp"
                android:text="@string/text_save" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>


</androidx.cardview.widget.CardView>