<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/details_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_titleAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_title_address" />

            <ImageView
                android:id="@+id/image_store"
                android:layout_width="match_parent"
                android:layout_height="150dp"></ImageView>

        </LinearLayout>
        </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:id="@+id/details_linearv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/details_customer_nombre" />

            <TextView
                android:id="@+id/details_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/textColorBlack"
                android:text="@string/details_customer_nombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/details_customer_address" />

            <TextView
                android:id="@+id/details_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/textColorBlack"
                android:text="@string/details_customer_address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/details_customer_telephone" />

            <TextView
                android:id="@+id/details_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:inputType="phone"
                android:textColor="@color/textColorBlack"
                android:text="@string/details_customer_telephone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/details_customer_email" />
            <TextView
                android:id="@+id/details_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/textColorBlack"
                android:text="@string/details_customer_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/details_customer_last_visited" />

            <TextView
                android:id="@+id/details_last_visited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/textColorBlack"
                android:text="@string/details_customer_telephone" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>
</ScrollView>